[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers"
authors = ["Aravind Samala <aravind.samala16@gmail.com>"]
readme = "README.md"
packages = [{ include = "papers" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.32.4"

[tool.poetry.scripts]
get-papers-list = "papers.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
