[project]
name = "pubmed-paper-fetcher-aravind"
version = "0.1.0"
description = "CLI tool to fetch PubMed paper details and extract non-academic authors."
authors = [{ name = "Aravind Samala", email = "aravind.samala16@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests"]

[project.scripts]
get-papers-list = "papers.cli:main"

[tool.poetry]
packages = [{ include = "papers" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
